standardised heading sizes and fixed code contrast

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -95,6 +95,10 @@ body {
 	background-color: #f8f8f8;
 }
 
+.hljs-literal {
+	color: green;
+}
+
 .post-comment {
 	margin: 40px 0 0 0;
 }
@@ -239,6 +243,30 @@ h2,
 h3 {
 	font-family: 'news cycle', sans-serif;
 	line-height: 1.2;
+}
+
+h1 {
+	font-size: 2em;
+}
+
+h2 {
+	font-size: 1.5em;
+}
+
+h3 {
+	font-size: 1.17em;
+}
+
+h4 {
+	font-size: 1em;
+}
+
+h5 {
+	font-size: 0.83em;
+}
+
+h6 {
+	font-size: 0.67em;
 }
 
 hr {
